# blue-db

./: .cargo-remote.toml  .env  Cargo.toml  entries.db
migrations/2020-12-17-123050_create_entries/: up.sql
migrations/2020-12-18-012757_create_categories/: up.sql
src/: blue.rs  lib.rs  models.rs  schema.rs  tests.rs
src/models/: category.rs  entry.rs  mod.rs
