[package]
name = "blue-db"
version = "0.1.0"
authors = ["builditluc <37375448+Builditluc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
uuid = { version = "0.8.1", features = ["v4"] }