[package]
name = "blue-db"
version = "0.1.0"
authors = ["builditluc <37375448+Builditluc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
uuid = "0.8.1"

[dependencies.diesel]
version = "1.4.4"
features = ["sqlite", "uuid", "chrono"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "0.8.1"
features = ["serde", "v4"]